serde-implicit/tests/ui/flatten_not_at_end.stderr
error: flatten variants must appear after all non-flatten variants in the enum definition
 --> tests/ui/flatten_not_at_end.rs:7:5
  |
7 |     Normal(bool),
  |     ^^^^^^
