serde-implicit/tests/ui/flatten_not_at_end.rs
#[derive(serde::Deserialize)]
struct Helper(String, bool);

#[derive(serde_implicit_proc::Deserialize)]
enum BadOrder {
    Flatten(#[serde_implicit(flatten)] Helper),
    Normal(bool),
}

fn main() {}
